chore(docs): bugfix + deploy on master

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Build dependencies
         run: |
           for project in noir barretenberg l1-contracts yarn-project; do
-            $project/bootstrap.sh
+            $project/bootstrap.sh ci
           done
 
       - name: Query new version
