--- a/playground/package.json
+++ b/playground/package.json
@@ -32,6 +32,7 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/styles": "^6.3.1",
+    "@toolpad/core": "^0.14.0",
     "buffer-json": "^2.0.0",
     "nosleep.js": "^0.12.0",
     "react": "^18.3.1",
