--- a/barretenberg/ts/package.json
+++ b/barretenberg/ts/package.json
@@ -5,15 +5,16 @@
   "homepage": "https://github.com/AztecProtocol/aztec-packages/tree/master/barretenberg/ts",
   "license": "MIT",
   "type": "module",
-  "types": "./dest/node-cjs/index.d.ts",
+  "types": "./dest/esm/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dest/node-cjs/index.js",
+      "require": "./dest/cjs/index.js",
       "browser": "./dest/browser/index.js",
-      "default": "./dest/node/index.js"
+      "default": "./dest/esm/index.js",
+      "webpack": "./dest/esm/index.js"
     }
   },
-  "bin": "dest/node/main.js",
+  "bin": "dest/esm/main.js",
   "files": [
     "src/",
     "dest/",
@@ -24,7 +25,7 @@
     "clean": "rm -rf ./dest .tsbuildinfo .tsbuildinfo.cjs",
     "build": "yarn clean && yarn build:wasm && yarn build:esm && yarn build:cjs && yarn build:browser",
     "build:wasm": "./scripts/build_wasm.sh",
-    "build:esm": "tsc -b && chmod +x ./dest/node/main.js",
+    "build:esm": "tsc -b tsconfig.esm.json && chmod +x ./dest/esm/main.js",
     "build:cjs": "tsc -b tsconfig.cjs.json && ./scripts/cjs_postprocess.sh",
     "build:browser": "webpack",
     "build:bindings": "cd .. && ./scripts/bindgen.sh",
