--- a/barretenberg/ts/tsconfig.cjs.json
+++ b/barretenberg/ts/tsconfig.cjs.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "CommonJS",
-    "outDir": "dest/node-cjs",
+    "outDir": "dest/cjs",
     "tsBuildInfoFile": "/dev/null"
   }
 }
