--- a/.github/workflows/docs-typesense.yml
+++ b/.github/workflows/docs-typesense.yml
@@ -1,4 +1,4 @@
-name: Docs Deploy
+name: Docs Scraper
 
 on:
   workflow_dispatch:
@@ -9,7 +9,7 @@ on:
       - docs/**
 
 jobs:
-  docs-pr:
+  docs-scraper:
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -22,30 +22,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Configure Git
-        run: |
-          git config --global user.name AztecBot
-          git config --global user.email tech@aztecprotocol.com
-
-      - name: Build dependencies
-        run: |
-          for project in noir barretenberg l1-contracts yarn-project; do
-            $project/bootstrap.sh
-          done
-
-      # Making the bash script here so we don't accidentally deploy
-      - name: Deploy docs
-        run: |
-          ./docs/bootstrap.sh release
 
       - name: Reindex with Typesense docsearch-scraper
         run: |
