--- a/barretenberg/ts/tsconfig.esm.json
+++ b/barretenberg/ts/tsconfig.esm.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "dest/esm",
+    "outDir": "dest/node",
     "tsBuildInfoFile": "/dev/null",
   }
 }
