--- a/docs/package.json
+++ b/docs/package.json
@@ -6,7 +6,7 @@
     "docs": "yarn preprocess && yarn typedoc && docusaurus start --host ${HOST:-localhost}",
     "dev": "PROTOCOL_SPECS=true HOST=0.0.0.0 ENV=dev yarn docs",
     "dev:local": "PROTOCOL_SPECS=true ENV=dev yarn docs",
-    "build": "yarn preprocess && yarn typedoc && yarn preprocess:move && docusaurus build",
+    "build": "yarn clean && yarn preprocess && yarn typedoc && yarn preprocess:move && docusaurus build",
     "build:with-specs": "PROTOCOL_SPECS=true yarn preprocess && yarn typedoc && yarn preprocess:move && PROTOCOL_SPECS=true docusaurus build",
     "swizzle": "docusaurus swizzle",
     "clean": "./scripts/clean.sh",
