--- a/barretenberg/ts/package.json
+++ b/barretenberg/ts/package.json
@@ -82,13 +82,13 @@
     "@types/source-map-support": "^0.5.6",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
-    "buffer": "^6.0.3",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.8.0",
     "html-webpack-plugin": "^5.6.3",
     "idb-keyval": "^6.2.1",
     "jest": "^29.5.0",
     "msgpackr": "^1.11.2",
+    "node-polyfill-webpack-plugin": "^4.1.0",
     "prettier": "^2.8.4",
     "terser-webpack-plugin": "^5.3.14",
     "ts-jest": "^29.1.0",
