--- a/barretenberg/ts/package.json
+++ b/barretenberg/ts/package.json
@@ -82,6 +82,7 @@
     "@types/source-map-support": "^0.5.6",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
+    "buffer": "^6.0.3",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.8.0",
     "html-webpack-plugin": "^5.6.3",
