--- a/spartan/aztec-network/templates/prover-node.yaml
+++ b/spartan/aztec-network/templates/prover-node.yaml
@@ -148,6 +148,8 @@ spec:
               value: "{{ .Values.proverNode.txGathering.maxParallelRequests }}"
             - name: PROVER_FAILED_PROOF_STORE
               value: "{{ .Values.proverNode.failedProofStore }}"
+            - name: PROVER_NODE_FAILED_EPOCH_STORE
+              value: "{{ .Values.proverNode.failedEpochStore }}"
             - name: L1_CHAIN_ID
               value: "{{ .Values.ethereum.chainId }}"
             - name: L1_FIXED_PRIORITY_FEE_PER_GAS
