--- a/spartan/aztec-network/values/alpha-testnet.yaml
+++ b/spartan/aztec-network/values/alpha-testnet.yaml
@@ -59,6 +59,7 @@ proverNode:
   l1FixedPriorityFeePerGas: 3
   l1GasLimitBufferPercentage: 15
   l1GasPriceMax: 1000
+  failedEpochStore: "gs://aztec-testnet/failed-epochs/"
   maxOldSpaceSize: "8192"
   storageSize: "512Gi"
   resources:
