chore: add backend config

--- a/spartan/aztec-network/templates/full-node.yaml
+++ b/spartan/aztec-network/templates/full-node.yaml
@@ -206,13 +206,16 @@ metadata:
   labels:
     {{- include "aztec-network.labels" . | nindent 4 }}
     app: full-node
+  annotations:
+    {{- if .Values.network.public }}
+    {{- if hasKey .Values.fullNode "fixedStaticIpName" }}
+    cloud.google.com/backend-config: '{"default": "{{ include "aztec-network.fullname" . }}-full-node-backend-config"}'
+    {{- end }}
+    {{- end }}
 spec:
   # If this is a public network, we want to expose the fulls node as a LoadBalancer
   {{- if .Values.network.public }}
   type: LoadBalancer
-  {{- if hasKey .Values.fullNode "fixedExternalIP" }}
-  loadBalancerIP: {{ .Values.fullNode.fixedExternalIP }}
-  {{- end}}
   {{- else }}
   type: ClusterIP
   clusterIP: None
@@ -251,7 +254,22 @@ spec:
       targetPort: {{ .Values.fullNode.service.adminPort }}
       name: admin
 ---
-{{- if hasKey .Values.fullNode "fixedExternalIP" }}
+{{- if hasKey .Values.fullNode "fixedStaticIpName" }}
+apiVersion: cloud.google.com/v1
+kind: BackendConfig
+metadata:
+  name: {{ include "aztec-network.fullname" . }}-full-node-backend-config
+  namespace: {{ .Release.Namespace }}
+spec:
+  healthCheck:
+    checkIntervalSec: 15
+    timeoutSec: 5
+    healthyThreshold: 2
+    unhealthyThreshold: 2
+    type: HTTP
+    requestPath: /status
+    port: 8080
+---
 apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
 metadata:
@@ -269,6 +287,8 @@ metadata:
     networking.gke.io/managed-certificates: {{ include "aztec-network.fullname" . }}-full-node-cert
     kubernetes.io/ingress.global-static-ip-name: {{ .Values.fullNode.fixedStaticIpName }}
     kubernetes.io/ingress.allow-http: "false"
+    cloud.google.com/health-check-port: "8080"
+    cloud.google.com/healthcheck-path: "/status"
 spec:
   rules:
   - host: full-node.alpha-testnet.aztec.network
