--- a/spartan/aztec-network/values/alpha-testnet.yaml
+++ b/spartan/aztec-network/values/alpha-testnet.yaml
@@ -46,6 +46,7 @@ bootNode:
 
 fullNode:
   fixedStaticIpName: "alpha-testnet-full-node-ip"
+  staticIpUrl: full-node.alpha-testnet.aztec.network
   enabled: true
   replicas: 1
   maxOldSpaceSize: "8192"
