--- a/barretenberg/cpp/src/barretenberg/dsl/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/dsl/CMakeLists.txt
@@ -7,7 +7,8 @@ set(DSL_DEPENDENCIES
     stdlib_keccak
     stdlib_poseidon2
     stdlib_schnorr
-    stdlib_honk_verifier)
+    stdlib_honk_verifier
+    libdeflate::libdeflate_static)
 
 if (NOT DISABLE_AZTEC_VM)
     list(APPEND DSL_DEPENDENCIES vm2)
