--- a/spartan/aztec-node/values.yaml
+++ b/spartan/aztec-node/values.yaml
@@ -1,10 +1,27 @@
-image: aztecprotocol/aztec:0.85.0-alpha-testnet.2
+# -- Overrides the chart name
+nameOverride: ""
+# -- Overrides the chart computed fullname
+fullnameOverride: ""
+
+# -- Image to use for the container
+image:
+  # -- Image repository
+  repository: aztecprotocol/aztec
+  # -- Image tag
+  tag: 0.85.0-alpha-testnet.2
+  # -- Container pull policy
+  pullPolicy: IfNotPresent
+
+# -- Pod management policy
 podManagementPolicy: Parallel
 
+# -- Network configuration
 network:
+  # -- Network name - this is a predefined network - alpha-testnet, devnet
   name: alpha-testnet
+  # -- L1 chain id - defaulted to sepolia
   l1ChainId: 11155111
-  ## Custom network
+  # -- Custom network - (not recommended) - Only for custom testnet usecases, (must have deployed your own protocol contracts first)
   customNetwork:
     enabled: false
     rollupContractAddress:
@@ -23,13 +40,15 @@ network:
     manaTarget:
     provingCostPerMana:
 
+# -- Aztec node configuration
 node:
+  # -- Number of replicas
   replicas: 1
+  # -- Log level - info, verbose, debug, trace
   logLevel: "info"
-
   # -- Extra arguments to pass to the node, see aztec --help for all available options
   extraArgs: []
-  # -- Validator configuration - enables validator mode
+  # -- Validator configuration - enables validator mode - TODO(md): not currently supported
   validator:
     enabled: false
     # Indexed by replica
@@ -39,34 +58,78 @@ node:
   # -- Sentinel configuration - gathers slashing information
   sentinel:
     enabled: false
+  # -- Blob sink configuration - sends and retrieves blob data from a remote server
+  blobSink:
+    enabled: false
+    url: ""
+  # -- Ethereum configuration
   ethereum:
+    # -- Ethereum hosts - comma separated list of hosts (geth, reth are currently supported)
     ethereumHosts: ""
+    # -- L1 consensus host urls - comma separated list of urls
     l1ConsensusHostUrls: ""
     ## Only when api key is required via header, otherwise just provide in l1ConsensusHostUrls
     ## Example: "1234abcd"
     l1ConsensusHostApiKeys: ""
     ## Example: "X-API-KEY"
     l1ConsensusHostApiKeyHeaders: ""
+  # -- Metrics configuration
   metrics:
+    # -- Exclude metrics - comma separated list of metrics to exclude
     otelExcludeMetrics: ""
+    # -- Collector endpoint - e.g. http://localhost:4318
     otelCollectorEndpoint: ""
+    # -- Use GCP logging
     useGcloudLogging: false
   storage:
-    # Total storage size for the pod
-    storageSize: 100Gi
+    # -- Data directory
     dataDirectory: /data
-    # Subsystems map sizes (kB)
+    # -- Data store map size (kB)
     dataStoreMapSize:
+    # -- World state map size (kB)
     worldStateMapSize:
+    # -- P2P storage map size (kB)
     p2pStorageMapSize:
+    # -- Archive storage map size (kB)
     archiveStorageMapSize:
   nodeJs:
+    # -- Maximum old space size
     maxOldSpaceSize: "4608"
+  startupProbe:
+    # -- Period seconds
+    periodSeconds: 30
+    # -- Failure threshold
+    failureThreshold: 3
 
 
 resources: {}
 
+persistence:
+  # -- Uses an emptyDir when not enabled
+  enabled: false
+  # -- Use an existing PVC
+  existingClaim: null
+  # -- AccessModes
+  accessModes:
+  - ReadWriteOnce
+  # -- Requested size
+  size: 100Gi
+  # -- Use a specific storage class
+  storageClassName: null
+  # -- Annotations for volume claim template
+  annotations: {}
+  # -- Selector for volume claim template
+  selector: {}
+
+# -- Update strategy for the statefulset
+updateStrategy:
+  type: RollingUpdate
+
+# -- Additional init containers
 initContainers: []
+# - name: my-init-container
+#   image: busybox:latest
+#   command: ['sh', '-c', 'echo hello']
 
 service:
   ingress:
