chore: rename simple_token_playground

--- a/noir-projects/noir-contracts/contracts/app/simple_token_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/app/simple_token_contract/Nargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "simple_token_playground"
+name = "simple_token_contract"
 authors = [""]
 compiler_version = ">=0.25.0"
 type = "contract"
