--- a/.test_patterns.yml
+++ b/.test_patterns.yml
@@ -188,6 +188,10 @@ tests:
     error_regex: "✕ keeps the jobs in progress while it is alive"
     owners:
       - *alex
+  - regex: "ethereum/src/test/tx_delayer.test.ts"
+    error_regex: "delays a transaction until a given L1 timestamp"
+    owners:
+      - *esau
 
   # boxes
   - regex: "boxes/scripts/run_test.sh"
