--- a/spartan/aztec-network/values/alpha-testnet-validators.yaml
+++ b/spartan/aztec-network/values/alpha-testnet-validators.yaml
@@ -45,6 +45,8 @@ faucet:
 bootNode:
   enabled: false
   replicas: 0
+  # unused.
+  externalHost: "http://localhost:8080"
 
 fullNode:
   enabled: false
