--- a/spartan/aztec-node/templates/statefulset.yaml
+++ b/spartan/aztec-node/templates/statefulset.yaml
@@ -55,22 +55,43 @@ spec:
               echo "export P2P_PORT=$EXTERNAL_PORT"     >> /env/init-nodeport;
               cat /env/init-nodeport;
       {{- end }}
-
       containers:
         - name: node
-          image: {{ .Values.image }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           command:
             - /bin/bash
             - -c
-            - >
+            - |
               {{- if .Values.nodePortEnabled }}
               source /env/init-nodeport;
               {{- end }}
 
-              node --no-warnings /usr/src/yarn-project/aztec/dest/bin/index.js start --node --archiver
-              {{- range .Values.node.extraArgs }}
-                {{ tpl . $ }}
+              start_cmd=("node" "/usr/src/yarn-project/aztec/dest/bin/index.js" "start")
+              pod_index=$(echo $K8S_POD_NAME | awk -F'-' '{print $NF}')
+
+              {{- if or (has "--sequencer" .Values.node.startCmd) (has "--prover-node" .Values.node.startCmd) }}
+              if [[ -f /config/l1-publisher/mnemonic ]]; then
+                mnemonic=$(cat /config/l1-publisher/mnemonic)
+                mnemonic_start_index=$(cat /config/l1-publisher/mnemonicStartIndex)
+                export L1_PUBLISHER_KEY=$(cast wallet private-key --mnemonic "$mnemonic" --mnemonic-index $(($mnemonic_start_index + $pod_index)))
+              elif [[ -f /config/l1-publisher/privateKeys ]]; then
+                line_index=$(($pod_index + 1))
+                export L1_PUBLISHER_KEY=$(sed -n -e "${line_index}p;${line_index}q" /config/l1-publisher/privateKeys)
+
+                if [[ -z $L1_PUBLISHER_KEY ]]; then
+                  echo "Private key for pod $K8S_POD_NAME not found"
+                  exit 1
+                fi
+
+              else
+                echo "No mnemonic or private keys configured."
+                exit 1
+              fi
               {{- end }}
+
+              start_cmd+=({{ join " " .Values.node.startCmd }})
+              "${start_cmd[@]}"
           startupProbe:
             httpGet:
               path: /status
@@ -86,12 +107,15 @@ spec:
             timeoutSeconds: 30
             failureThreshold: 3
           volumeMounts:
-            - name: node-data
+            - name: storage
               mountPath: {{ .Values.node.storage.dataDirectory }}
             {{- if .Values.nodePortEnabled }}
             - name: init-nodeport
               mountPath: /env
             {{- end }}
+            - name: l1-publisher
+              mountPath: /config/l1-publisher
+              readOnly: true
           env:
             - name: POD_IP
               valueFrom:
@@ -111,10 +135,17 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            {{- if .Values.network }}
             - name: NETWORK
-              value: "{{ .Values.network.name }}"
+              value: "{{ .Values.network }}"
+            {{- else }}
+            - name: REGISTRY_CONTRACT_ADDRESS
+              value: "{{ .Values.customNetwork.registryAddress }}"
+            - name: L1_CHAIN_ID
+              value: "{{ .Values.customNetwork.l1ChainId }}"
+            {{- end }}
             - name: NODE_OPTIONS
-              value: "--max-old-space-size={{ .Values.node.nodeJs.maxOldSpaceSize}}"
+              value: {{ join " " .Values.node.nodeJsOptions | quote }}
             - name: AZTEC_PORT
               value: "{{ .Values.service.httpPort }}"
             - name: AZTEC_ADMIN_PORT
@@ -125,34 +156,60 @@ spec:
               value: "1"
             - name: P2P_ENABLED
               value: "{{ .Values.service.p2p.enabled }}"
-            - name: VALIDATOR_DISABLED
-              value: {{ .Values.node.validator.enabled | quote }}
-            - name: L1_CHAIN_ID
-              value: "{{ .Values.network.l1ChainId }}"
-            - name: OTEL_RESOURCE_ATTRIBUTES
-              value: service.name={{ .Release.Name }},service.namespace={{ .Release.Namespace }},service.version={{ .Chart.AppVersion }},environment={{ .Values.environment | default "production" }}
+            {{- if .Values.node.remoteUrl.archiver }}
+            - name: ARCHIVER_URL
+              value: {{ .Values.node.remoteUrl.archiver | quote }}
+            {{- end }}
+            {{- if .Values.node.remoteUrl.proverBroker }}
+            - name: PROVER_BROKER_URL
+              value: {{ .Values.node.remoteUrl.proverBroker | quote }}
+            {{- end }}
+            {{- if .Values.node.remoteUrl.blobSink }}
+            - name: BLOB_SINK_URL
+              value: {{ .Values.node.remoteUrl.blobSink | quote }}
+            {{- end }}
+            {{- if gt (len .Values.node.remoteUrl.proverCoordinationNodes) 0 }}
+            - name: PROVER_COORDINATION_NODE_URLS
+              value: {{ join "," .Values.node.remoteUrl.proverCoordinationNodes | quote }}
+            {{- end }}
+            {{- if gt (len .Values.node.l1ExecutionUrls) 0 }}
+            - name: ETHEREUM_HOSTS
+              value: {{ join "," .Values.node.l1ExecutionUrls | quote }}
+            {{- end }}
+            {{- if gt (len .Values.node.l1ConsensusUrls) 0 }}
+            - name: L1_CONSENSUS_HOST_URLS
+              value: {{ join "," .Values.node.l1ConsensusUrls | quote }}
+            - name: L1_CONSENSUS_HOST_API_KEYS
+              value: {{ join "," .Values.node.l1ExecutionApiKeys | quote }}
+            - name: L1_CONSENSUS_HOST_API_KEY_HEADERS
+              value: {{ join "," .Values.node.l1ExecutionApiKeyHeaders | quote }}
+            {{- end }}
             - name: DATA_DIRECTORY
-              value: "{{ .Values.node.storage.dataDirectory }}"
+              value: {{ .Values.node.storage.dataDirectory | quote }}
             - name: DATA_STORE_MAP_SIZE_KB
-              value: "{{ .Values.node.storage.dataStoreMapSize }}"
+              value: {{ .Values.node.storage.dataStoreMapSize | quote }}
             - name: WS_DB_MAP_SIZE_KB
-              value: "{{ .Values.node.storage.worldStateMapSize }}"
+              value: {{ .Values.node.storage.worldStateMapSize | quote }}
             - name: USE_GCLOUD_LOGGING
-              value: "{{ .Values.node.metrics.useGcloudLogging }}"
+              value: {{ .Values.node.metrics.useGcloudLogging | quote }}
+            {{- if .Values.node.metrics.otelCollectorEndpoint }}
             - name: OTEL_EXCLUDE_METRICS
-              value: "{{ .Values.node.metrics.otelExcludeMetrics }}"
+              value: {{ .Values.node.metrics.otelExcludeMetrics | quote }}
             - name: OTEL_EXPORTER_OTLP_METRICS_ENDPOINT
               value: "{{ .Values.node.metrics.otelCollectorEndpoint }}/v1/metrics"
             - name: OTEL_EXPORTER_OTLP_TRACES_ENDPOINT
               value: "{{ .Values.node.metrics.otelCollectorEndpoint }}/v1/traces"
             - name: OTEL_EXPORTER_OTLP_LOGS_ENDPOINT
               value: "{{ .Values.node.metrics.otelCollectorEndpoint }}/v1/logs"
-            - name: SENTINEL_ENABLED
-              value: "{{ .Values.node.sentinel.enabled }}"
-            {{- if .Values.node.blobSink.enabled }}
-            - name: BLOB_SINK_URL
-              value: "{{ .Values.node.blobSink.url }}"
             {{- end }}
+            {{- if .Values.node.coinbase }}
+            - name: COINBASE
+              value: {{ .Values.node.coinbase | quote }}
+            - name: PROVER_ID
+              value: {{ .Values.node.coinbase | quote }}
+            {{- end }}
+            - name: SENTINEL_ENABLED
+              value: {{ .Values.node.sentinel.enabled | quote }}
           ports:
             - containerPort: {{ .Values.service.httpPort }}
             - containerPort: {{ .Values.service.admin.port }}
@@ -162,6 +219,9 @@ spec:
           resources:
             {{- toYaml .Values.node.resources | nindent 12 }}
       volumes:
+        - name: l1-publisher
+          secret:
+            secretName: {{ include "chart.name" . }}-l1-publisher
         {{- if .Values.nodePortEnabled }}
         - name: init-nodeport
           configMap:
@@ -193,4 +253,3 @@ spec:
             {{- toYaml .Values.persistence.selector | nindent 10 }}
           {{- end }}
     {{- end }}
-
