--- a/playground/package.json
+++ b/playground/package.json
@@ -33,6 +33,7 @@
     "@mui/material": "^6.3.1",
     "@mui/styles": "^6.3.1",
     "@toolpad/core": "^0.14.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "buffer-json": "^2.0.0",
     "nosleep.js": "^0.12.0",
     "react": "^18.3.1",
