add ethereum values

--- a/spartan/aztec-network/values/archival-node.yaml
+++ b/spartan/aztec-network/values/archival-node.yaml
@@ -9,6 +9,11 @@ snapshots:
 network:
   public: true
 
+ethereum:
+  chainId: "11155111"
+  l1GasPriceMax: 1000
+  l1FixedPriorityFeePerGas: 3
+
 aztec:
   realProofs: true
   numberOfDefaultAccounts: 0
