--- a/playground/package.json
+++ b/playground/package.json
@@ -37,6 +37,7 @@
     "buffer-json": "^2.0.0",
     "nosleep.js": "^0.12.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5"
   },
