--- a/.test_patterns.yml
+++ b/.test_patterns.yml
@@ -113,6 +113,10 @@ tests:
     error_regex: "TimeoutError: Timeout awaiting isMined"
     owners:
       - *palla
+  - regex: "e2e_p2p/validators_sentinel"
+    error_regex: "Expected: >= 2"
+    owners:
+      - *palla
   - regex: "src/e2e_fees/private_payments"
     owners:
       - *phil
