--- a/spartan/configuration/alpha-nodes/backend.yaml
+++ b/spartan/configuration/alpha-nodes/backend.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   sessionAffinity:
     affinityType: "CLIENT_IP"
+    affinityCookieTtlSec: 240
   healthCheck:
     checkIntervalSec: 15
     healthyThreshold: 2
