--- a/.test_patterns.yml
+++ b/.test_patterns.yml
@@ -114,6 +114,8 @@ tests:
     owners:
       - *palla
   - regex: "e2e_p2p/validators_sentinel"
+    # Too noisey, skipping.
+    skip: true
     error_regex: "Expected: >= 2"
     owners:
       - *palla
