--- a/.github/workflows/publish-bb-mac.yml
+++ b/.github/workflows/publish-bb-mac.yml
@@ -63,7 +63,9 @@ jobs:
       - name: Replace version string in main.cpp
         working-directory: barretenberg/cpp
         run: |
-          sed -i.bak "s/00000000\.00000000\.00000000/${{ inputs.ref_name || inputs.tag || github.ref_name }}/g" src/barretenberg/bb/cli.cpp
+          version_string=${{ inputs.ref_name || inputs.tag || github.ref_name }}
+          version_string=$(echo $version_string | sed "s/\//_/")
+          sed -i.bak "s/00000000\.00000000\.00000000/$version_string/g") src/barretenberg/bb/cli.cpp
 
       - name: Compile Barretenberg
         working-directory: barretenberg/cpp
