--- a/spartan/aztec-node/templates/secret.yaml
+++ b/spartan/aztec-node/templates/secret.yaml
@@ -7,7 +7,7 @@ metadata:
 data:
   {{- if .Values.node.l1Publisher.mnemonic }}
   mnemonic: {{ .Values.node.l1Publisher.mnemonic | b64enc }}
-  mnemonicStartIndex: {{ .Values.node.l1Publisher.mnemonicStartIndex or 1 | b64enc }}
+  mnemonicStartIndex: {{ or .Values.node.l1Publisher.mnemonicStartIndex 1 | toString | b64enc }}
   {{- else }}
   privateKeys: {{ join "\n" .Values.node.l1Publisher.privateKeys | b64enc }}
   {{- end }}
